# cashit

./: .gitignore  .pre-commit-config.yaml  LICENSE  cov.xml  pyproject.toml  pyrigthconfig.json  readme.md  setup.cfg
.github/workflows/: continous-integration.yml
src/: db.db
src/cashit/: __main__.py  cli.py  commands.py  model.py  settings.py
src/cashit/addExpanse/: expanse.py
src/cashit/addExpense/: __init__.py
src/cashit/command/: __init__.py
src/cashit/model/: __init__.py  database.db  item.py
src/cashit/utils/: __init__.py  db.py  db_utils.py  fileProcessing.py  general.py  interface.py  schema.py
tests/: conftest.py  test_cashit.py
