[tool.poetry]
name = "cashit"
version = "0.1.0"
description = ""
authors = ["Zija <zija1504@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^19.10b0", allow-prereleases = true}
flake8 = {version = "^3.7.9", allow-prereleases = true}
mypy = {version = "^0.761", allow-prereleases = true}
pytest-cov = "^2.8.1"
pre-commit = "^1.21.0"
pytest-pythonpath = "^0.7.3"
codecov = "^2.0.15"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
